implemented layer normalization and made the simple model more complex to use layer norm

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ add_executable(neural_network
     src/layers/Activations.cpp
     src/utils/Optimizer.cpp
     src/utils/LossFunction.cpp
+    src/layers/LayerNorm.cpp
 )
 
 # Define the source files for the test executable
