--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,8 @@ cmake_minimum_required(VERSION 3.10)
 
 project(TransformerCPP)
 
-# Include directories where header files are located
 include_directories(include)
 
-# Define the source files for the main application executable
 add_executable(neural_network
     src/main.cpp
     src/utils/Tensor.cpp
@@ -16,9 +14,9 @@ add_executable(neural_network
     src/layers/LayerNorm.cpp
     src/layers/PositionwiseFeedForward.cpp
     src/layers/MultiHeadAttention.cpp
+    src/layers/Dropout.cpp
 )
 
-# Define the source files for the test executable
 add_executable(test_tensor
     tests/test_tensor.cpp
     src/utils/Tensor.cpp
