implemented encoder and decoder (untested)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,8 @@ add_executable(neural_network
     src/layers/Embedding.cpp
     src/layers/PositionalEncoding.cpp
     src/utils/Masking.cpp
+    src/models/Encoder.cpp
+    src/models/Decoder.cpp
 )
 
 add_executable(test_tensor
