--- a/config.ini
+++ b/config.ini
@@ -1,21 +1,24 @@
-inference_mode = true
+inference_mode = false
 load_existing_weights = true
 weights_filename = transformer_weights.bin
 data_filename = ../data/tiny_shakespeare.txt
 
-embed_dim = 128
+embed_dim = 256
 max_sequence_length = 100
-num_layers = 2
+num_layers = 8
 num_heads = 8
-ff_hidden_dim = 512
+ff_hidden_dim = 1024
 dropout_rate = 0.1
 pad_token_id = 0.0
 
 learning_rate = 0.0005
-num_epochs = 10
+num_epochs = 100
 batch_size = 16
 input_seq_length = 10
 decoder_seq_length = 10
 
 max_generate_length = 100
 initial_prompt = ROMEO:
+
+num_threads = 500
+ 
