weights_filename = auto -> format filename using model layers*hidden size * num_heads

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 inference_mode = false
 load_existing_weights = true
-weights_filename = transformer_weights.bin
+weights_filename = auto
 data_filename = ../data/tiny_shakespeare.txt
 
 embed_dim = 256
