TransformerConfig: name_ -> _name

--- a/config.ini
+++ b/config.ini
@@ -1,23 +1,23 @@
-inference_mode = false
-weights_filename = auto
-data_filename = ../data/tiny_shakespeare.txt
+inferenceMode = false
+weightsFilename = auto
+dataFilename = ../data/tiny_shakespeare.txt
 
-embed_dim = 256
-max_sequence_length = 100
-num_layers = 32
-num_heads = 16
-ff_hidden_dim = 1024
-dropout_rate = 0.1
-pad_token_id = 0.0
+embedDim = 256
+maxSequenceLength = 100
+numLayers = 32
+numHeads = 16
+ffHiddenDim = 1024
+dropoutRate = 0.1
+padTokenId = 0.0
 
-learning_rate = 0.0005
-num_epochs = 100
-batch_size = 128
-input_seq_length = 10
-decoder_seq_length = 10
+learningRate = 0.0005
+numEpochs = 100
+batchSize = 128
+inputSeqLength = 10
+decoderSeqLength = 10
 
-max_generate_length = 100
-initial_prompt = ROMEO:
+maxGenerateLength = 100
+initialPrompt = ROMEO:
 
-num_threads = 500
+numThreads = 500
  
