--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ set(CMAKE_CXX_FLAGS_RELEASE "-O3 -march=native -flto -DNDEBUG")
 set(CMAKE_EXE_LINKER_FLAGS_RELEASE "-flto")
 
 include_directories(include)
+include_directories(${CMAKE_SOURCE_DIR}/extern/spdlog/include)
 
 add_executable(neural_network
     src/main.cpp
@@ -43,6 +44,8 @@ add_executable(neural_network
 target_precompile_headers(neural_network PRIVATE src/pch.h)
 
 if (WIN32)
+  set(CMAKE_CXX_FLAGS "/utf-8")
+  set(CMAKE_C_FLAGS "/utf-8")
 else()
   # Link filesystem library (C++17)
   target_link_libraries(neural_network PRIVATE stdc++fs)
