--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,7 @@ add_executable(neural_network
     src/models/Decoder.cpp
     src/models/Transformer.cpp
     src/utils/DataLoader.cpp
+    src/utils/Tokenizer.cpp
     src/utils/CharToIdGenerator.cpp
     src/utils/ThreadPool.cpp
     src/utils/ConfigParser.cpp
