config.ini: comments added about value relations

--- a/config.ini
+++ b/config.ini
@@ -2,10 +2,16 @@ inferenceMode = false
 weightsFilename = auto
 dataFilename = ../data/tiny_shakespeare.txt
 
-embedDim = 256
+# inputSeqLength <= maxSequenceLength
+# decoderSeqLength <= maxSequenceLength
+inputSeqLength = 10
+decoderSeqLength = 10
 maxSequenceLength = 100
-numLayers = 32
+# _embedDim % _numHeads == 0
+embedDim = 256
 numHeads = 16
+
+numLayers = 32
 ffHiddenDim = 1024
 dropoutRate = 0.1
 padTokenId = 0.0
@@ -13,8 +19,6 @@ padTokenId = 0.0
 learningRate = 0.0005
 numEpochs = 100
 batchSize = 128
-inputSeqLength = 10
-decoderSeqLength = 10
 
 maxGenerateLength = 100
 initialPrompt = ROMEO:
